--- a/_css/reset.css
+++ b/_css/reset.css
@@ -50,6 +50,7 @@ html.debug * {
 ============================================================ */
 body {
     background-color:#fff;
+    text-rendering:optimizeLegibility;
     margin:1em auto;
     width:90%;
 }
@@ -59,61 +60,53 @@ body {
     }
 }
 body, pre, select, input, textarea, button {
-    color:#555;
-    font:400 1em/1 sans-serif; /* 16px/16px */
-   -webkit-font-smoothing:antialiased;
-    text-rendering:optimizeLegibility;
+    color:#444;
+    font-family:sans-serif;
+    font-weight:400;
+    font-size:1em; /* 16px */
+    line-height:1; /* 16px */
 }
-
 h1 {
-    color:#333;
-    font:300 2.25em/1 sans-serif; /* 36px/36px */
-    letter-spacing:-0.05556em; /* -2px */
-    word-wrap:break-word;
-    margin:0.8889em 0; /*32px 0 */
-}
-@media screen and (min-width:36em) {
-    h1 {
-        font-size:3em; /* 48px */
-        letter-spacing:-0.04167em; /* -2px */
-        margin:0.6667em 0; /* 32px 0 */
-    }
+    font-weight:700;
+    font-size:2em; /* 32px */
+    line-height:1; /* 32px */
+    letter-spacing:-0.03125em; /* -1px */
+    margin:1em 0; /* 32px 0 */
 }
 h2,
 legend {
     color:#222;
-    font:500 1.5em/1 sans-serif; /* 24px/24px */
-    margin:1.3333em 0 0.6667em; /* 32px 0 0 */
-    padding-top:0.625em; /* 15px */
-    border-top:1px solid #e0e0e0;
-    }
-    h2 a {
-        color:#222;
-        border-bottom:1px solid #ddd;
-    }
+    font-weight:400;
+    font-size:1.5em; /* 24px */
+    line-height:1; /* 24px */
+    margin:1.3333em 0 0.6667em; /* 32px 0 16px */
+}
 h3 {
-    color:#222;
-    font:500 1.3125em/1.1429 sans-serif; /* 21px/24px */
+    color:#333;
+    font-weight:400;
+    font-size:1.3125em; /* 21px */
+    line-height:1.1429; /* 24px */
     margin:1.1429em 0 0; /* 24px 0 0 */
-    border-top:0 none;
-    }
-    h3 a {
-        color:#222;
-        border-bottom:1px solid #ddd;
-    }
+}
 h4 {
     color:#444;
-    font:600 1.125em/1.3334 sans-serif; /* 18px/24px */
+    font-weight:400;
+    font-size:1.125em; /* 18px */
+    line-height:1.3334; /* 24px */
     margin:1.3334em 0 0; /* 24px 0 0 */
 }
 h5 {
     color:#555;
-    font:600 1em/1 sans-serif; /* 16px/16px */
+    font-weight:700;
+    font-size:1em; /* 16px */
+    line-height:1; /* 16px */
     margin:1.5em 0 0; /* 24px 0 0 */
 }
 h6 {
     color:#666;
-    font:600 0.875em/1.1429 sans-serif; /* 14px/16px */
+    font-weight:700;
+    font-size:0.875em; /* 14px */
+    line-height:1.1429; /* 16px */
     text-transform:uppercase;
     letter-spacing:0.1429em; /* 2px */
     margin:1.7143em 0 0; /* 24px 0 0 */
@@ -129,7 +122,9 @@ p,pre,blockquote,ul,ol,dl,figure,figcaption,table,fieldset {
     margin:0.5em 0; /* 8px 0 */
 }
 hr {
-    font:600 2em/1 sans-serif; /* 32px/32px */
+    font-weight:700;
+    font-size:2em; /* 32px */
+    line-height:1; /* 32px */
     text-align:center;
     margin:1em 0 2em; /* 0 0 32px */
     border:0;
@@ -154,43 +149,41 @@ pre {
 }
 blockquote {
     color:#666;
-    font:400 0.9375em/1.6 sans-serif; /* 15px/24px */
-    border-left:0.25em solid #f0f0f0;
-    margin:1.0667em 0 1.6em; /* 16px 0 24px */
-    padding:0 1.6em 0 1.334em; /* 0 24px 0 20px */
+    font-size:1em; /* 16px */
+    line-height:1.5; /* 32px */
+    border-left:0.25em solid #eee;
+    margin:1em 0 1.5em; /* 16px 0 24px */
+    padding:0 1.5em 0 1.25em; /* 0 24px 0 20px */
     }
     blockquote p {
-        line-height:1.6; /* 24px */
-        margin:0.5333em 0; /* 8px 0 */
+        line-height:1.5; /* 24px */
+        margin:0.5em 0; /* 8px 0 */
     }
 
 /* Grouping > Lists */
-ul, ol {
+li {
+    margin-left:1.5em; /* 24px */
+}
+ol {
+    list-style-type:decimal;
+}
+ul {
+    list-style-type:square;
     }
-    ul li {
-        list-style-type:square;
-        margin-left:1.5em; /* 24px */
-        }
-        ul li ul li {
-            list-style-type:circle;
-        }
-    ol li {
-        list-style-type:decimal;
-        margin-left:1.5em; /* 24px */
+    ul li li {
+        list-style-type:circle;
     }
-    li ul li, li ol li {
-        margin:0 0 0 1.5em; /* 0 0 0 24px */
-    }
+}
 dt {
-    color:#333;
-    font:600 1em/1.5 sans-serif;
+    font-size:1em; /* 16px */
+    line-height:1.5; /* 24px */
 }
 dd {
-    padding:0 1.5em 0; /* 0 16px 0 */
-    }
-    dd > * {
+    margin-left:1.5em; /* 24px */
+    > * {
         margin-top:0;
     }
+}
 
 /* Grouping > Figures */
 figure {
@@ -198,7 +191,8 @@ figure {
 }
 figcaption {
     color:#666;
-    font:400 0.875em/1.1429 sans-serif; /* 14px/16px */
+    font-size:0.875em; /* 14px */
+    line-height:1.1429; /* 16px */
     margin:0.5714em 0; /* 8px 0 */
     clear:left;
     }
@@ -238,11 +232,13 @@ a {
         transition:none;
     }
 em, em a, i, cite, cite a {
-    font:italic 400 1em/90% Georgia,serif;
+    font-style:italic;
+    line-height:90%;
 }
 strong, b {
     color:#333;
-    font:normal 600 1em/90% sans-serif;
+    font-weight:700;
+    line-height:90%;
 }
 :lang(en-gb)>q {
     quotes:"\201C" "\201D" "\2018" "\2019";
@@ -258,7 +254,6 @@ small {
 }
 abbr {
     font-size:0.875em; /* 14px */
-    font-weight:400;
     line-height:90%;
     letter-spacing:0.0357em; /* 0.5px */
     opacity:0.9;
@@ -269,17 +264,19 @@ dfn[title] {
     cursor:help;
 }
 code {
-    font:1em/90% Menlo,Monaco,'Courier New',Courier,monospace; /* 16px/90% */
+    font-family:Menlo,Monaco,Courier,monospace;
+    font-size:1em; /* 16px */
+    line-height:90%;
     }
     code {
-        color:#807;
+        color:#906;
     }
     code .comment {
-        color:#888;
+        color:#999;
     }
 kbd {
     color:#666;
-    font:normal 400 0.875em/90% sans-serif; /* 14px/90% */
+    line-height:90%;
     background-color:#fcfcfc;
     margin:0 0.25em; /* 0 4px */
     border:1px solid #e6e6e6;
@@ -302,7 +299,7 @@ sup {
     Edits
 ============================================================ */
 mark, ins {
-    background-color:#ffffdd;
+    background-color:#ffd;
     line-height:90%;
     padding:0 0.125em; /* 0 2px */
     }
@@ -334,7 +331,8 @@ table {
 caption {
     caption-side:bottom;
     color:#666;
-    font:400 0.875em/1.1429 sans-serif; /* 14px/16px */
+    font-size:0.875em; /* 14px */
+    line-height:1.1429; /* 16px */
     margin:0.5714em 0; /* 8px 0 */
 }
 td, th {
@@ -345,7 +343,9 @@ td, th {
 }
 th {
     color:#555;
-    font:600 1em/1 sans-serif; /* 16px/16px */
+    font-size:1em; /* 16px */
+    font-weight:700;
+    line-height:1; /* 16px */
     border-bottom-color:#ccc;
     padding-bottom:0.4375em; /* 7px */
     padding:0.25em 2em 0.6875em 0; /* 4px 32px 11px 0 */
@@ -368,13 +368,16 @@ fieldset div {
 }
 fieldset div em {
     color:#666;
-    font:400 0.875em/1.1429 sans-serif; /* 14px/16px */
+    font-size:0.875em; /* 14px */
+    line-height:1.1429; /* 16px */
     margin:0.5714em 0 0 0; /* 8px 0 0 0 */
     display:block;
 }
 fieldset abbr[title="Required"] {
     color:#900;
-    font:600 1.25em/0.1 sans-serif; /* 20px */
+    font-weight:700;
+    font-size:1.25em; /* 20px */
+    line-height:0.1;
     border-bottom:0 none;
 }
 fieldset div.submit {
@@ -384,7 +387,8 @@ fieldset div.submit {
 label,
 fieldset.options legend {
     color:#444;
-    font:600 1em/1 sans-serif;
+    font-size:1em; /* 16px */
+    line-height:1; /* 16px */
     margin:0.5em 0; /* 8px 0 */
     display:block;
     }
@@ -403,7 +407,8 @@ fieldset.options legend {
     }
     label.check,
     fieldset.options label {
-        font:400 1em/1 sans-serif;
+        font-size:1em; /* 16px */
+        line-height:1; /* 16px */
     }
     fieldset.options li {
         list-style:none;
@@ -417,7 +422,6 @@ input.text,
 select,
 textarea,
 button {
-    font:400 1em/1.5 sans-serif;
     background-color:#f0f0f0;
    -webkit-border-radius:0px;
    -webkit-box-shadow:inset 0 1px 0 #e0e0e0;
@@ -447,7 +451,9 @@ input[type="submit"],
 button {
     color:#06f;
     background-color:#f0f0f0;
-    font:600 1em/1.5 sans-serif;
+    font-size:1em; /* 16px */
+    font-weight:700;
+    line-height:1.5; /* 24px */
    -webkit-box-shadow:inset 0 -1px 0 rgba(0,0,0,0.1);
    -moz-box-shadow:inset 0 -1px 0 rgba(0,0,0,0.1);
     box-shadow:inset 0 -1px 0 rgba(0,0,0,0.1);
@@ -526,8 +532,7 @@ input[type="submit"] {
         padding:0 1em;
         page-break-inside:avoid;
     }
-    a, a:visited,
-    .entry a, .entry a:visited {
+    a, a:visited {
         color:#222 !important;
         border-bottom:1px dotted #999;
         padding-left:0 !important;
