--- a/_css/reset.css
+++ b/_css/reset.css
@@ -1,27 +1,12 @@
 /* ============================================================
-    Debuging
-============================================================ */
-html.debug body {
-    background-image: -webkit-linear-gradient(top, rgba(0,0,0,0) 87.5%,rgba(0,0,0,0.2) 100%);
-    background-image: -moz-linear-gradient(top, rgba(0,0,0,0) 87.5%, rgba(0,0,0,0.2) 100%);
-    background-image: -ms-linear-gradient(top, rgba(0,0,0,0) 87.5%,rgba(0,0,0,0.2) 100%);
-    background-image: -o-linear-gradient(top, rgba(0,0,0,0) 87.5%, rgba(0,0,0,0.2) 100%);
-    background-image: linear-gradient(top, rgba(0,0,0,0.3) 87.5%,rgba(0,0,0,0.2) 100%);
-   -webkit-background-size: 100% 8px;
-   -o-background-size: 100% 8px;
-    background-size: 100% 8px;
-}
-html.debug * {
-    background-color:rgba(255,0,0,0.1);
-}
-
-
-/* ============================================================
     HTML5 Elements
 ============================================================ */
 section, nav, article, aside, hgroup, header, footer,
 img, figure, figcaption, details, menu {
     display:block;
+}
+audio, video, canvas {
+    display:inline-block;
 }
 
 
@@ -29,58 +14,61 @@ img, figure, figcaption, details, menu {
     Sectioning
 ============================================================ */
 body {
-    background-color:#fff;
-    text-rendering:optimizeLegibility;
-    margin:1em auto;
-    width:90%;
-}
-@media screen and (min-width:36em) {
-    body {
-        width:80%;
-    }
-}
-body, pre, select, input, textarea, button {
     color:#444;
     font-family:sans-serif;
     font-weight:400;
     font-size:1em; /* 16px */
     line-height:1; /* 16px */
+    background-color:#fff;
+    text-rendering:optimizeLegibility;
+    margin:0 auto;
+    width:90%;
+}
+@media screen and (min-width:40em) {
+    body {
+        width:80%;
+    }
 }
 h1 {
+    color:#222;
     font-weight:700;
     font-size:2em; /* 32px */
     line-height:1; /* 32px */
     letter-spacing:-0.03125em; /* -1px */
-    margin:1em 0; /* 32px 0 */
+    margin:0.25em 0 0.5em; /* 8px 0 16px */
+   -webkit-font-smoothing: antialiased;
 }
-h2,
-legend {
-    color:#222;
-    font-weight:400;
+h2 {
+    color:#333;
+    font-weight:700;
     font-size:1.5em; /* 24px */
     line-height:1; /* 24px */
-    margin:1.3333em 0 0.6667em; /* 32px 0 16px */
+    margin:1.3334em 0 0.3334em; /* 32px 0 8px */
+   -webkit-font-smoothing: antialiased;
 }
 h3 {
-    color:#333;
+    color:#444;
     font-weight:400;
     font-size:1.3125em; /* 21px */
     line-height:1.1429; /* 24px */
-    margin:1.1429em 0 0; /* 24px 0 0 */
+    margin:1.1429em 0 0.3810em; /* 24px 0 8px */
+   -webkit-font-smoothing: antialiased;
 }
 h4 {
     color:#444;
     font-weight:400;
     font-size:1.125em; /* 18px */
     line-height:1.3334; /* 24px */
-    margin:1.3334em 0 0; /* 24px 0 0 */
+    margin:1.3334em 0 0.4444em; /* 24px 0 8px */
+   -webkit-font-smoothing: antialiased;
 }
-h5 {
+h5, legend {
     color:#555;
     font-weight:700;
     font-size:1em; /* 16px */
     line-height:1; /* 16px */
-    margin:1.5em 0 0; /* 24px 0 0 */
+    margin:1.5em 0 0.5em; /* 24px 0 8px */
+   -webkit-font-smoothing: antialiased;
 }
 h6 {
     color:#666;
@@ -89,17 +77,32 @@ h6 {
     line-height:1.1429; /* 16px */
     text-transform:uppercase;
     letter-spacing:0.1429em; /* 2px */
-    margin:1.7143em 0 0; /* 24px 0 0 */
+    margin:1.7143em 0 0.5714em; /* 24px 0 8px */
+   -webkit-font-smoothing: antialiased;
+}
+header {
+    margin-bottom:1em;
+    border-bottom:1px solid #e9e9e9;
+    padding-top:2em;
+}
+footer {
+    margin-top:2em;
+    border-top:1px solid #e9e9e9;
+    padding-top:0.5em;
+}
+nav ul {
+    margin:0;
+    list-style:none;
 }
 
 
 /* ============================================================
     Grouping
 ============================================================ */
-p, pre, blockquote, ul, ol, dl, figure, figcaption, table, fieldset {
+p, pre, blockquote, ul, ol, dl, figure, figcaption, table, fieldset, details {
     font-size:1em; /* 16px */
     line-height:1.5; /* 24px */
-    margin:0.5em 0; /* 8px 0 */
+    margin:0 0 1em 0; /* 0 0 16px 0 */
 }
 hr {
     font-weight:700;
@@ -121,19 +124,19 @@ hr {
         height:0;
     }
 pre {
-    margin:0.5em 0 0.5em 1.5em; /* 8px 0 8px 24px */
-    white-space:pre; /* CSS2 */
-    white-space:pre-wrap; /* CSS 2.1 */
-    white-space:pre-line; /* CSS 2.1 & 3 */
-    word-wrap:break-word; /* IE */
-}
+    margin-left:1.5em; /* 24px */
+    white-space: pre-wrap;
+    }
+    pre code,
+    pre samp {
+        line-height:1.5;
+    }
 blockquote {
     color:#666;
     font-size:1em; /* 16px */
     line-height:1.5; /* 32px */
-    border-left:0.25em solid #eee;
-    margin:1em 0 1.5em; /* 16px 0 24px */
-    padding:0 1.5em 0 1.25em; /* 0 24px 0 20px */
+    border-left:0.25em solid #e9e9e9;
+    padding:0 1.5em 0 1em; /* 0 24px 0 16px */
     }
     blockquote p {
         line-height:1.5; /* 24px */
@@ -154,25 +157,28 @@ ul {
     }
 dt {
     font-size:1em; /* 16px */
+    font-weight:700;
     line-height:1.5; /* 24px */
 }
-dd, li li {
+dd, li {
     margin-left:1.5em; /* 24px */
     }
-    dd > *, li li > * {
+    dd > *, li > * {
         margin-top:0;
     }
 
 /* Grouping > Figures */
-figure {
-    margin:0 0 2em 0; /* 0 0 32px 0 */
-}
-figcaption p {
-    color:#666;
-    font-size:0.875em; /* 14px */
-    line-height:1.4286; /* 20px */
-    margin:0.5714em 0; /* 8px 0 */
+figcaption {
+    color:#999;
+    font-size:0.75em; /* 12px */
+    line-height:1.3334; /* 16px */
+    margin:1em 0; /* 12px 0 */
+    border-top:1px solid #e9e9e9;
+    padding:1em 0; /* 12px 0 */
     clear:left;
+}
+blockquote + figcaption:before {
+    content:"\2014";
 }
 
 
@@ -180,33 +186,27 @@ figcaption p {
     Text-level semantics
 ============================================================ */
 a {
-    color:#06f;
+    color:#34d;
     text-decoration:none;
-    border-bottom:1px solid rgba(0,102,255,0.25);
+    border-bottom:1px solid rgba(51,68,221,0.1);
     }
     a:focus {
-        outline:1px solid rgba(51,102,204,0.4);
+        outline:1px solid rgba(51,68,221,0.3);
     }
-    a:hover,
-    a:active {
-        color:#39f;
-        border-bottom:1px solid rgba(51,153,255,0.25);
+    a:hover {
+        color:#12b;
+        border-bottom-color:rgba(17,34,187,0.2);
     }
     a:link, a:visited, a:hover {
-       -webkit-transition:all 0.2s ease;
-       -moz-transition:all 0.2s ease;
-       -o-transition:all 0.2s ease;
         transition:all 0.2s ease;
     }
     a:active {
-        color:#03c;
-        border-bottom:1px solid rgba(0,51,204,0.25);
-       -webkit-transition:none;
-       -moz-transition:none;
-       -o-transition:none;
+        color:#b12;
+        border-bottom:1px solid rgba(187,17,34,0.25);
         transition:none;
     }
-em, em a, i, cite, cite a {
+em, i, cite, var {
+    font-family:Georgia,serif;
     font-style:italic;
     line-height:90%;
 }
@@ -222,24 +222,24 @@ strong, b {
     q::after { content:close-quote;
     }
 small {
-    font-size:0.875em; /* 14px */
-    line-height:1.1429; /* 16px */
+    color:#666;
+    font-size:0.75em; /* 12px */
+    line-height:1.3334; /* 16px */
     display:inline-block;
-    opacity:0.9;
 }
 abbr {
+    color:#666;
     font-size:0.875em; /* 14px */
     line-height:90%;
     letter-spacing:0.0357em; /* 0.5px */
-    opacity:0.9;
 }
 abbr[title],
 dfn[title] {
     border-bottom:1px dotted rgba(0,0,0,0.3);
     cursor:help;
 }
-code {
-    font-family:Menlo,Monaco,Courier,monospace;
+code, samp {
+    font-family:'DejaVu Sans Mono',Inconsolata,Consolas,'Lucida Console',monospace;
     font-size:1em; /* 16px */
     line-height:90%;
     }
@@ -249,14 +249,21 @@ code {
     code .comment {
         color:#999;
     }
+samp {
+    background-color:#f9f9f9;
+    padding:0.25em;
+}
 kbd {
     color:#666;
+    font-family:inherit;
+    font-size:87.5%;
     line-height:90%;
-    background-color:#fcfcfc;
+    background-color:#f9f9f9;
     margin:0 0.25em; /* 0 4px */
-    border:1px solid #e6e6e6;
+    border:1px solid #e9e9e9;
     border-radius:4px;
-    padding:0.1429em 0.4286em; /* 2px 6px */
+    padding:0.3334em 0.5em;
+    box-shadow:inset 0 1px 0 #fff;
 }
 sub {
     font-size:smaller;
@@ -274,12 +281,12 @@ sup {
     Edits
 ============================================================ */
 mark, ins {
-    background-color:#ffd;
+    background-color:#ffc;
     line-height:90%;
     padding:0 0.125em; /* 0 2px */
     }
     ins {
-        background-color:#f0f0f0;
+        background-color:#e9e9e9;
     }
 del, s {
     line-height:90%;
@@ -291,6 +298,7 @@ del, s {
     Embedded content
 ============================================================ */
 img {
+    border:0;
     max-width:100%;
 }
 
@@ -299,30 +307,29 @@ img {
     Tabular data
 ============================================================ */
 table {
-    margin:1em 0; /* 16px 0 */
     border-collapse:collapse;
     border-spacing:0;
 }
 caption {
     caption-side:bottom;
-    color:#666;
-    font-size:0.875em; /* 14px */
-    line-height:1.1429; /* 16px */
-    margin:0.5714em 0; /* 8px 0 */
+    color:#999;
+    font-size:0.75em; /* 12px */
+    line-height:1.3334; /* 16px */
+    text-align:left;
+    margin:1em 0; /* 12px 0 */
 }
 td, th {
     text-align:left;
-    border-bottom:1px solid #f0f0f0;
-    padding:0.2857em 2.2857em 0.2143em 0; /* 4px 32px 3px 0 */
+    border-bottom:1px solid #e9e9e9;
+    padding:0.375em 2em 0.375em 0; /* 6px 32px 6px 0 */
     vertical-align:top;
 }
 th {
-    color:#555;
     font-weight:700;
-    padding-bottom:0.4375em; /* 7px */
+    padding-bottom:0.5em; /* 8px */
 }
 thead th {
-    border-bottom-color:#ccc;
+    border-bottom:2px solid #ddd;
 }
 
 
@@ -330,173 +337,103 @@ thead th {
     Forms
 ============================================================ */
 fieldset {
-    margin-top:2em;
-    border:0 none;
+    border:0;
     padding:0;
 }
-fieldset legend {
-    margin-top:0;
-    width:100%;
-    padding-bottom:1em
+legend {
+    margin:0;
 }
-fieldset div {
-    margin:0.5em 0 1em; /* 8px 0 16px */
-}
-fieldset div em {
-    color:#666;
-    font-size:0.875em; /* 14px */
-    line-height:1.1429; /* 16px */
-    margin:0.5714em 0 0 0; /* 8px 0 0 0 */
-    display:block;
-}
-fieldset abbr[title="Required"] {
-    color:#900;
-    font-weight:700;
-    font-size:1.25em; /* 20px */
-    line-height:0.1;
-    border-bottom:0 none;
-}
-fieldset div.submit {
-    border-top:1px solid #f0f0f0;
-    padding-top:0.9375em; /* 15px */
-}
-label,
-fieldset.options legend {
-    color:#444;
-    font-size:1em; /* 16px */
-    line-height:1; /* 16px */
-    margin:0.5em 0; /* 8px 0 */
-    display:block;
-    }
-    label {
-        cursor:pointer;
-    }
-    label.check {
-        margin:0;
-        padding:0.5em 0; /* 8px 0 */
-        width:inherit;
-        float:none;
-    }
-    fieldset.options legend {
-        border:0 none;
-        padding:0 0 1em 0; /* 0 0 16px */
-    }
-    label.check,
-    fieldset.options label {
-        font-size:1em; /* 16px */
-        line-height:1; /* 16px */
-    }
-    fieldset.options li {
-        list-style:none;
-        margin:0;
-    }
-    label.check input,
-    fieldset.options li input {
-        margin-right:0.25em;
-    }
-input.text,
-select,
-textarea,
-button {
-    background-color:#f0f0f0;
-    line-height:1.5; /* 24px */
-   -webkit-border-radius:0px;
-   -webkit-box-shadow:inset 0 1px 0 #e0e0e0;
-   -moz-box-shadow:inset 0 1px 0 #e0e0e0;
-    box-shadow:inset 0 1px 0 #e0e0e0;
-    box-sizing:border-box;
-    border:0 none;
-    border-radius:0.25em;
-    padding:0.25em; /* 4px */
-    vertical-align:middle;
-    width:100%;
-}
-textarea {
-    overflow:auto;
-}
-select {
-    background-color:none;
-   -webkit-box-shadow:none;
-   -moz-box-shadow:none;
-    box-shadow:none;
-    margin-bottom:-0.375em; /* 6px */
-    border:1px solid #ccc;
-    padding:0.25em; /* 4px 0 */
-    width:auto;
-}
-input[type="button"],
-input[type="submit"],
-button {
-    color:#06f;
-    background-color:#f0f0f0;
-    font-size:1em; /* 16px */
-    font-weight:700;
-    line-height:1.5; /* 24px */
-   -webkit-box-shadow:inset 0 -1px 0 rgba(0,0,0,0.1);
-   -moz-box-shadow:inset 0 -1px 0 rgba(0,0,0,0.1);
-    box-shadow:inset 0 -1px 0 rgba(0,0,0,0.1);
-    border:0 none;
-    border-radius:0.25em;
-    margin-right:1em; /* 16px */
-    padding:0.25em 2%; /* 4px 2% */
-    opacity:0.9;
-    width:auto;
-    overflow:visible;
+label {
+    line-height:1.5;
     cursor:pointer;
 }
+button,
+input,
+select,
+textarea {
+    color:inherit;
+    font-family:inherit;
+    font-size:100%;
+    margin:0;
+    outline:0;
+}
+select {
+   -webkit-appearance:button;
+    appearance:normal;
+}
+button,
+input[type="button"],
 input[type="submit"] {
-    color:#fff;
-    background-color:#06f;
-   -webkit-box-shadow:inset 0 -1px 0 rgba(0,0,0,0.25);
-   -moz-box-shadow:inset 0 -1px 0 rgba(0,0,0,0.25);
-    box-shadow:inset 0 -1px 0 rgba(0,0,0,0.25);
-    margin-right:0.5em;
+   -webkit-appearance:button;
+    line-height:normal;
+    width:auto;
+    cursor:pointer;
     }
-    input[type="button"]:hover,
-    input[type="submit"]:hover,
-    button:hover {
-        opacity:1;
-    }
-    input[type="button"]:active,
-    input[type="submit"]:active,
-    button:active {
-       -webkit-box-shadow:inset 0 -1px 0 rgba(0,0,0,0.1), inset 0 1px 2px rgba(0,0,0,0.25);
-       -moz-box-shadow:inset 0 -1px 0 rgba(0,0,0,0.1), inset 0 1px 2px rgba(0,0,0,0.25);
-        box-shadow:inset 0 -1px 0 rgba(0,0,0,0.1), inset 0 1px 2px rgba(0,0,0,0.25);
-    }
-
-@media screen and (min-width:36em) {
-    fieldset div em,
-    fieldset div.submit,
-    fieldset.options ul,
-    label.check {
-        margin-left:23.539%;
-    }
-    fieldset.options {
-        margin:0;
-    }
-    label,
-    fieldset.options legend {
+    button::-moz-focus-inner,
+    input::-moz-focus-inner {
+        border:0;
         padding:0;
-        width:23.539%;
-        float:left;
     }
-    input.text,
-    textarea {
-        width:66%;
-    }
+input[type="radio"],
+input[type="checkbox"] {
+    margin-right:0.25em;
+}
+input[type="search"] {
+   -webkit-appearance:textfield;
+   -webkit-box-sizing:content-box;
+   -moz-box-sizing:content-box;
+    box-sizing:content-box;
+}
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-decoration {
+   -webkit-appearance:none;
+}
+[disabled] {
+    cursor: default;
 }
 
+/* Placeolder */
+::-webkit-input-placeholder {
+   color:#999;
+    }
+    :focus::-webkit-input-placeholder {
+        color:#ccc;
+    }
+:-moz-placeholder {
+   color:#999;  
+    }
+    :focus:-moz-placeholder {
+        color:#ccc;
+    }
+:-ms-input-placeholder {
+   color:#999;  
+    }
+    :focus:-ms-input-placeholder {
+       color:#ccc;  
+    }
+
+
+/* ============================================================
+    Interactive
+============================================================ */
+summary {
+    border:0;
+    outline:0;
+    cursor:pointer;
+}
+
+
+/* ============================================================
+    Print styles
+============================================================ */
 @media print {
     @page {
         margin:0.5cm;
     }
     * {
         background:transparent !important;
-        color:#222 !important;
+        color:#000 !important;
         text-shadow:none !important;
-       -webkit-box-shadow:none;
-       -moz-box-shadow:none;
         box-shadow:none;
     }
     p, h1, h2, h3 {
@@ -512,7 +449,7 @@ input[type="submit"] {
         page-break-inside:avoid;
     }
     a, a:visited {
-        color:#222 !important;
+        color:#000 !important;
         border-bottom:1px dotted #999;
         padding-left:0 !important;
     }
@@ -529,8 +466,6 @@ input[type="submit"] {
     input[type="search"],
     textarea {
         border-bottom:1px solid #999;
-       -webkit-box-shadow:none;
-       -moz-box-shadow:none;
         box-shadow:none;
     }
 }
