--- a/_css/reset.css
+++ b/_css/reset.css
@@ -281,7 +281,7 @@ sup {
     Edits
 ============================================================ */
 mark, ins {
-    background-color:#ffc;
+    background-color:#fff9d9;
     line-height:90%;
     padding:0 0.125em; /* 0 2px */
     }
