Updated highlight colour

--- a/_css/patterns.css
+++ b/_css/patterns.css
@@ -2,7 +2,7 @@
     Highlight/Marks
 ============================================================ */
 .highlight {
-    background-color:#f9f9f9;
+    background-color:#eee;
 }
 .mark {
     background-color:#fff9d9;
