--- a/_css/reset.css
+++ b/_css/reset.css
@@ -182,7 +182,7 @@ figcaption {
     color: #999;
     font-size: 0.75em; /* 12px */
     line-height: 1.3334; /* 16px */
-    border-bottom: 1px solid #e9e9e9;
+    border-top: 1px solid #e9e9e9;
     padding: 1em 0; /* 12px 0 */
     clear: left;
 }
