--- a/_css/patterns.css
+++ b/_css/patterns.css
@@ -158,7 +158,7 @@ a[rel="tag"] {
     margin-left: 0;
     }
 .articles .h {
-    margin: 0;
+    margin-top: 0;
 }
 .articles p {
     color: #444;
